fixed margin on mobile view

--- a/chamber/styles/chamber_mobile.css
+++ b/chamber/styles/chamber_mobile.css
@@ -52,8 +52,9 @@
         padding-bottom: 4rem;
     }
 
-    .hero h2 {
+    .hero h1 {
         padding: 1rem 0 1.5rem 0;
+        margin: 1rem;
     }
 
     #hero h1 {
@@ -83,6 +84,11 @@
     .floating-btn:hover {
         background: var(--primary-color);
         color: #fff;
+    }
+
+    .spotlights h2 {
+        padding: 1rem 0 1.5rem 0;
+        margin: 1rem;
     }
 
     .container {
